refactor
* extracted IT in separate module (need to re-add jacoco)
* made sure BRU dependencies are obtained with the correct bundle context